--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "prod": "brunch build --production"
   },
   "dependencies": {
+    "alt": "~0.18.4",
     "react": "~15.0.1",
     "react-dom": "~15.0.1",
-    "alt": "~0.18.4"
+    "react-router": "^2.3.0"
   },
   "devDependencies": {
     "auto-reload-brunch": "^2.7.1",
