--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prod": "brunch build --production"
   },
   "dependencies": {
-    "alt": "~0.18.4",
+    "alt": "~0.16.10",
+    "alt-utils": "^1.0.0",
     "react": "~15.0.1",
     "react-dom": "~15.0.1",
     "react-router": "^2.3.0"
