--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "alt": "~0.16.10",
     "alt-utils": "^1.0.0",
+    "lodash": "^4.11.1",
     "react": "~15.0.1",
     "react-dom": "~15.0.1",
     "react-router": "^2.3.0"
