--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router": "^2.3.0"
   },
   "devDependencies": {
+    "bootstrap": "^4.0.0-alpha.2",
     "auto-reload-brunch": "^2.7.1",
     "babel-brunch": "~6.0.4",
     "babel-preset-es2015": "~6.6.0",
