--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "alt": "~0.16.10",
     "alt-utils": "^1.0.0",
     "lodash": "^4.11.1",
-    "react": "~15.0.1",
-    "react-dom": "~15.0.1",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
     "react-router": "^2.3.0"
   },
   "devDependencies": {
     "bootstrap": "^4.0.0-alpha.2",
     "auto-reload-brunch": "^2.7.1",
     "babel-brunch": "~6.0.4",
-    "babel-preset-es2015": "~6.6.0",
-    "babel-preset-react": "~6.5.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "brunch": "^2.4.0",
     "clean-css-brunch": "^2.0.0",
     "css-brunch": "^2.6.1",
